# LoggerLibrary

./: .gitignore  README.md  logger_module.hpp  main.cpp
LoggerLibraryTests/: CMakeLists.txt  testRunner.hpp  test_main.cpp
LoggerLibraryTests/Tests/: test_LogFile.cpp
docs/: API.md  DOCUMENTATION.md  EXAMPLES.md
